fix title sizes on mobile and desktop

--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -20,7 +20,7 @@ img {
     margin-bottom: 27px;
     text-align: center;
     text-transform: uppercase;
-    font-size: 28px;
+    font-size: 18px;
     font-weight: 600;
     font-family: 'Raleway';
     color: $main-seagreen-color;
@@ -35,5 +35,11 @@ img {
         @include pseudoline( $display: inline-block, $content: '', $width: 60px, $height: 1px);
         background-color: $slider__pseudo-line-color;
         margin-right: 15px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .section-title {
+        font-size: 28px;
     }
 }
